--- a/ipcamrec.csproj
+++ b/ipcamrec.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0EA83608-6FB2-475E-9101-640B3767E799}</ProjectGuid>
+    <ProjectGuid>{5EF63ECB-E00C-437F-AAAA-2AC0103BC42B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISpyService</RootNamespace>
-    <AssemblyName>ispyservice</AssemblyName>
+    <RootNamespace>ipcamrec</RootNamespace>
+    <AssemblyName>ipcamrec</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
