Forgot to add camrec.csproj

--- a/camrec.csproj
+++ b/camrec.csproj
@@ -60,7 +60,7 @@
     <None Include="uninstall.bat" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="config.sample.xml" />
+    <Content Include="camrec.sample.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
