Fixed CPU intensive bug

--- a/camrec.csproj
+++ b/camrec.csproj
@@ -60,7 +60,9 @@
     <None Include="uninstall.bat" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="camrec.sample.xml" />
+    <Content Include="camrec.sample.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
